# gas-turbine

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.agents/skills/gas-turbine-cycle-software-designer/: SKILL.md
examples/: simple_brayton_case.json
src/gas_turbine/: __init__.py  cycle.py  models.py  visualization.py
tests/: test_cycle.py  test_visualization.py
